--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     api 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.1'
-    
+    implementation 'org.reflections:reflections:0.10.2'
+
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
