cambio de librerias

--- a/build.gradle
+++ b/build.gradle
@@ -163,7 +163,7 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     api 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.1'
-    implementation 'org.reflections:reflections:0.10.2'
+    implementation 'io.github.classgraph:classgraph:4.8.103'
 
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
