--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 package=co.com.bancolombia
 systemProp.version=1.0.0
 simulateRest=true
+gradle.publish.key=sQb68DwqrnG4jUz6mPRSz9WPllK18TtL
+gradle.publish.secret=omJfOrzcdJs55XkUNsVgxxp1YXzxuCUe
