--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
 
     # Publicar plugin
     - name: Publish Plugin
-      if: github.ref == 'refs/heads/trunk' && github.event_name == 'push'
+      #if: github.ref == 'refs/heads/trunk' && github.event_name == 'push'
       env:
         GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
         GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
