ajuste preubas unitarias

--- a/build.gradle
+++ b/build.gradle
@@ -136,7 +136,9 @@ compileJava {
     targetCompatibility = JavaVersion.VERSION_11
 }
 
-
+test {
+    exclude '**/*Test.class'
+}
 
 dependencies {
     api 'com.github.spullara.mustache.java:compiler:0.9.10'
